bindings/java/src/main/java/io/slatedb/jna/ffi/UniffiLib.java


  Short uniffi_slatedb_ffi_checksum_method_ffidb_scan_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_shutdown();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_snapshot();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_status();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_write();

  Short uniffi_slatedb_ffi_checksum_method_ffidb_write_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_build();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_db_cache_disabled();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_merge_operator();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_seed();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_settings();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_sst_block_size();

  Short uniffi_slatedb_ffi_checksum_method_ffidbbuilder_with_wal_object_store();

  Short uniffi_slatedb_ffi_checksum_method_ffidbiterator_next();

  Short uniffi_slatedb_ffi_checksum_method_ffidbiterator_seek();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_get();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_get_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_scan();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_prefix_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_scan_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreader_shutdown();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_build();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_checkpoint_id();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_merge_operator();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbreaderbuilder_with_wal_object_store();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_key_value_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_get_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_prefix_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbsnapshot_scan_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_commit_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_delete();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_key_value_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_get_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_id();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_mark_read();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_merge_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_put_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_rollback();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_prefix_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_scan_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_seqnum();

  Short uniffi_slatedb_ffi_checksum_method_ffidbtransaction_unmark_write();

  Short uniffi_slatedb_ffi_checksum_method_ffilogcallback_log();

  Short uniffi_slatedb_ffi_checksum_method_ffimergeoperator_merge();

  Short uniffi_slatedb_ffi_checksum_method_ffisettings_set();

  Short uniffi_slatedb_ffi_checksum_method_ffisettings_to_json_string();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfile_id();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfile_iterator();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfile_metadata();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_file();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfile_next_id();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfile_shutdown();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_next();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalfileiterator_shutdown();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalreader_get();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalreader_list();

  Short uniffi_slatedb_ffi_checksum_method_ffiwalreader_shutdown();

  Short uniffi_slatedb_ffi_checksum_method_ffiwritebatch_delete();

  Short uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge();

  Short uniffi_slatedb_ffi_checksum_method_ffiwritebatch_merge_with_options();

  Short uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put();

  Short uniffi_slatedb_ffi_checksum_method_ffiwritebatch_put_with_options();

  Short uniffi_slatedb_ffi_checksum_constructor_ffidbbuilder_new();

  Short uniffi_slatedb_ffi_checksum_constructor_ffidbreaderbuilder_new();

  Short uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_from_env();

  Short uniffi_slatedb_ffi_checksum_constructor_ffiobjectstore_resolve();

  Short uniffi_slatedb_ffi_checksum_constructor_ffisettings_default();

  Short uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env();

  Short uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_env_with_default();

  Short uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_file();

  Short uniffi_slatedb_ffi_checksum_constructor_ffisettings_from_json_string();

  Short uniffi_slatedb_ffi_checksum_constructor_ffisettings_load();

  Short uniffi_slatedb_ffi_checksum_constructor_ffiwalreader_new();

  Short uniffi_slatedb_ffi_checksum_constructor_ffiwritebatch_new();

  Integer ffi_slatedb_ffi_uniffi_contract_version();
}
